--- a/frontend/src/components/layout/UserSidebar.css
+++ b/frontend/src/components/layout/UserSidebar.css
@@ -1,7 +1,7 @@
 .user-sidebar {
   width: 240px;
   min-width: 240px;
-  height: 100vh;
+  height: 100dvh;
   background-color: var(--bg-secondary);
   display: flex;
   flex-direction: column;
